Port to 1.20.1
To anyone on github finding this and wanting to use it:
many things are still broken. It's a miracle it even works in this state